--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -34,26 +34,26 @@ $breakpoint-desktop: 1024px;
 
 //icons
 $burguer-icons: (
-    "burguer":"/img/burger.svg",
-    "burger-modo-noct" : "/img/burger-modo-noct.svg",
+    "burguer":"../img/burger.svg",
+    "burger-modo-noct" : "../img/burger-modo-noct.svg",
 );
 $media-icons: (
-    "facebook": "/img/icon_facebook.svg",
-    "twitter": "/img/icon_twitter.svg",
-    "instagram": "/img/icon_instagram.svg",
+    "facebook": "../img/icon_facebook.svg",
+    "twitter": "../img/icon_twitter.svg",
+    "instagram": "../img/icon_instagram.svg",
 );
 $media-icons-hover: (
-    "facebook": "/img/icon_facebook_hover.svg",
-    "twitter": "/img/icon_twitter_hover.svg",
-    "instagram": "/img/icon_instagram_hover.svg",
+    "facebook": "../img/icon_facebook_hover.svg",
+    "twitter": "../img/icon_twitter_hover.svg",
+    "instagram": "../img/icon_instagram_hover.svg",
 );
 $card-icons: (
-    "fav": "/img/icon-fav.svg",
-    "expand": "/img/icon-max-normal.svg",
-    "download": "/img/icon-download.svg",
+    "fav": "../img/icon-fav.svg",
+    "expand": "../img/icon-max-normal.svg",
+    "download": "../img/icon-download.svg",
 );
 $card-icons-hover: (
-    "fav": "/img/icon-fav-hover.svg",
-    "expand": "/img/icon-max-hover.svg",
-    "download": "/img/icon-download-hover.svg",
+    "fav": "../img/icon-fav-hover.svg",
+    "expand": "../img/icon-max-hover.svg",
+    "download": "../img/icon-download-hover.svg",
 );
