--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,11 @@ li {
 }
 @media only screen and (min-width: 1024px) {
   .index {
+    grid-template-rows: 100px 1fr 520px 121px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .index {
     grid-template-rows: 100px 1fr 640px 121px;
   }
 }
@@ -418,6 +423,7 @@ footer__icon {
   height: 50px;
   border: 1px solid #572EE5;
   border-radius: 27px;
+  z-index: 10;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -477,7 +483,7 @@ footer__icon {
   overflow-y: hidden;
   display: flex;
 }
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 1024px) {
   .trending__carousel {
     justify-content: center;
   }
@@ -492,23 +498,36 @@ footer__icon {
 .carousel-item {
   margin: 0 11px;
   position: relative;
+  background-color: gray;
 }
 @media only screen and (min-width: 1024px) {
   .carousel-item {
-    min-height: 275px;
+    width: 200px;
   }
 }
 @media only screen and (min-width: 1440px) {
   .carousel-item {
     width: 357px;
+    min-height: 275px;
   }
 }
 .carousel-item__img {
-  background-color: gray;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .carousel-item__details {
+  background-color: #572EE5B3;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  bottom: 101%;
+}
+.carousel-item:hover .carousel-item__details {
+  opacity: 1;
+}
+.carousel-item__icons {
   position: absolute;
   top: 10px;
   right: 10px;
