--- a/scss/components/_grids.scss
+++ b/scss/components/_grids.scss
@@ -2,6 +2,9 @@
     display: grid;
     grid-template-rows:100px 1fr 430px 201px;
     @include respond-to($breakpoint-desktop) {
+        grid-template-rows:100px 1fr 520px 121px;
+    }
+    @include respond-to(1440px) {
         grid-template-rows:100px 1fr 640px 121px;
     }
 }
