--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -7,6 +7,7 @@ $color-black: #000000;
 $color-white: #FFFFFF;
 $color-white-transparency: #FFFFFF80;
 $color-gray-transparency: #9CAFC38C;
+$color-purple-transparency: #572EE5B3;
 
 // Night mode colors
 $color-medium-gray: #37383C;
