--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -32,6 +32,7 @@ $fs: (
 //Breakpoints
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
+$breakpoint-big-desktop: 1440px;
 
 //icons
 $burguer-icons: (
