--- a/scss/base/_buttons.scss
+++ b/scss/base/_buttons.scss
@@ -29,3 +29,12 @@
             margin-right: 19.3%;
         }
 }
+.watch-more-button {
+    @extend %reset-button;
+    width: 127px;
+    height: 50px;
+    background-image: url("../img/CTA-ver-mas.svg");
+    &:hover {
+        background-image: url("../img/CTA-ver-mas-hover.svg");
+    }
+}
