--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -29,4 +29,8 @@
             }
         }
     }
+    height: 201px;
+    @include respond-to($breakpoint-desktop) {
+        height: 121px;
+    }
 }
