--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ li {
   color: #9CAFC3;
 }
 
-.search-bar__button, .watch-more-button, .button-close, .button {
+.search-bar__button, .start-button, .watch-more-button, .button-close, .button {
   border: none;
   background: none;
   outline: none;
@@ -151,12 +151,25 @@ li {
 }
 
 .watch-more-button {
+  display: none;
   width: 127px;
   height: 50px;
   background-image: url("../img/CTA-ver-mas.svg");
 }
 .watch-more-button:hover {
   background-image: url("../img/CTA-ver-mas-hover.svg");
+}
+
+.start-button {
+  width: 127px;
+  height: 50px;
+  border-radius: 25px;
+  color: #572EE5;
+  font-size: 13px;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  border: 1px solid #572EE5;
+  margin-top: 20px;
 }
 
 .index {
@@ -180,7 +193,7 @@ li {
 }
 @media only screen and (min-width: 1024px) {
   .figure {
-    grid-template-rows: 20vh 1fr 29vh;
+    grid-template-rows: 20vh 1fr 1fr;
   }
 }
 
@@ -257,6 +270,7 @@ footer__icon {
 }
 
 .header {
+  height: 100px;
   padding: 0 7%;
   border-top: 5px solid #572EE5;
   display: flex;
@@ -265,7 +279,6 @@ footer__icon {
   align-items: center;
   color: #FFFFFF;
   background-color: #FFFFFF;
-  box-shadow: 0 2px 4px 1px #9CAFC38C;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -336,6 +349,10 @@ footer__icon {
   }
 }
 
+.sticky-header {
+  box-shadow: 0 2px 4px 1px #9CAFC38C;
+}
+
 .nav {
   display: none;
 }
@@ -368,6 +385,7 @@ footer__icon {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  height: 201px;
 }
 @media only screen and (min-width: 768px) {
   .footer {
@@ -397,6 +415,11 @@ footer__icon {
   .footer__p--copy {
     flex-grow: 2;
     text-align: end;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .footer {
+    height: 121px;
   }
 }
 
@@ -433,25 +456,84 @@ footer__icon {
 .main__p {
   width: 60%;
   max-width: 402px;
+  cursor: pointer;
+}
+.main__p span:not(:last-child)::after {
+  content: ", ";
 }
 
 .search-bar {
   width: 89%;
   max-width: 551px;
-  height: 50px;
+  min-height: 50px;
+  height: auto;
   border: 1px solid #572EE5;
+  background-color: white;
   border-radius: 27px;
   z-index: 10;
+}
+.search-bar__components {
+  margin-top: 12px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+}
+.search-bar__icon {
+  margin-left: 20px;
+  width: 20px;
+  height: 20px;
+  visibility: hidden;
+  background-repeat: no-repeat;
 }
 .search-bar__input {
   outline: none;
   border: none;
-  margin-left: 20px;
+  margin-left: 15px;
+  flex-grow: 2;
 }
+.search-bar__button {
+  margin-right: 20px;
+  width: 20px;
+  height: 20px;
+  background-image: url("../img/icon-search.svg");
+  background-repeat: no-repeat;
+}
+.search-bar__button.close-btn {
+  background-image: url("../img/close.svg");
+}
+.search-bar__suggestions {
+  list-style-image: url("../img/search.svg");
+  color: #9CAFC3;
+  margin-left: 28px;
+  text-align: left;
+}
+.search-bar__suggestions li {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.6rem;
+  font-weight: normal;
+  margin-left: 15px;
+  margin-top: 4px;
+  padding-left: 10px;
+}
+.search-bar__suggestions li:last-child {
+  margin-bottom: 18px;
+}
+
+.search-bar__results {
+  display: none;
+  margin-top: 10px;
+  margin-bottom: 14px;
+}
+
+.search-line::after {
+  content: " ";
+  display: block;
+  margin: 0 auto;
+  width: 93%;
+  border-bottom: 1px solid #9CAFC38C;
+}
+
 @media only screen and (min-width: 768px) {
   .sticky {
     width: 334px;
@@ -469,7 +551,7 @@ footer__icon {
 .trending {
   background-color: #F3F5F8;
   padding: 46px 11px 82px 11px;
-  width: 100vw;
+  height: 430px;
 }
 @media only screen and (min-width: 1024px) {
   .trending {
@@ -506,6 +588,16 @@ footer__icon {
     justify-content: center;
   }
 }
+@media only screen and (min-width: 1024px) {
+  .trending {
+    height: 520px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .trending {
+    height: 640px;
+  }
+}
 
 .carousel-item {
   width: 65%;
@@ -514,6 +606,7 @@ footer__icon {
 }
 
 .carousel-item {
+  cursor: pointer;
   margin: 0 11px;
   position: relative;
   background-color: gray;
@@ -567,18 +660,32 @@ footer__icon {
   font-weight: bold;
 }
 
+.max-gif {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+}
+
 .figure {
   height: inherit;
   width: inherit;
-  background-color: #FFFFFF;
+  background-color: #FFFFFFF9;
 }
 .figure__img {
   width: 318px;
-  background-color: gray;
+  height: 245px;
 }
 @media only screen and (min-width: 768px) {
   .figure__img {
     width: 48%;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .figure__img {
+    width: 700px;
+    height: 400px;
   }
 }
 .figure__caption {
@@ -597,6 +704,7 @@ footer__icon {
 }
 .figure__caption-text {
   flex-grow: 2;
+  width: 50px;
   text-align: start;
   color: #000000;
 }
@@ -607,13 +715,13 @@ footer__icon {
   font-weight: bold;
 }
 
+.search-results {
+  display: none;
+  margin-bottom: 80px;
+}
+
 .gallery {
   margin: 28px 2.8% 78px 2.8%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
 }
 @media only screen and (min-width: 768px) {
   .gallery {
@@ -625,6 +733,7 @@ footer__icon {
   height: 120px;
   margin: 10px;
   object-fit: cover;
+  cursor: pointer;
 }
 @media only screen and (min-width: 768px) {
   .gallery__gifo {
@@ -659,6 +768,10 @@ footer__icon {
   font-weight: bold;
 }
 
+.no-results {
+  display: none;
+  margin-bottom: 80px;
+}
 .no-results__search {
   background-image: url("../img/icon-busqueda-sin-resultado.svg");
 }
@@ -677,6 +790,37 @@ footer__icon {
     content: "\a";
     white-space: pre;
   }
+}
+
+.create-gifo__screen {
+  width: 688px;
+  height: 390px;
+  border: 1px solid #572EE5;
+  margin: 0 auto;
+  padding-top: 134px;
+  padding-bottom: 48px;
+}
+.create-gifo__screen p {
+  color: #000000;
+  height: 135px;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.6rem;
+}
+@media only screen and (min-width: 768px) {
+  .create-gifo__p--span::before {
+    content: "\a";
+    white-space: pre;
+  }
+}
+.create-gifo__steps {
+  height: 75px;
+}
+.create-gifo__division {
+  width: 796px;
+  height: 7px;
+  border-radius: 10px;
+  background-color: #572EE5;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=styles.css.map */
