--- a/scss/layout/_gifos-gallery.scss
+++ b/scss/layout/_gifos-gallery.scss
@@ -1,7 +1,11 @@
+.search-results {
+    display: none;
+    margin-bottom: 80px;
+}
 .gallery {
     margin: 28px 2.8% 78px 2.8%;
-    @include flex(row, flex-start, center);
-    flex-wrap: wrap;
+    // @include flex(row, flex-start, center);
+    // flex-wrap: wrap;
     @include respond-to($breakpoint-tablet) {
         margin: 28px 10% 78px 10%;
     }
@@ -10,6 +14,7 @@
         height: 120px;
         margin: 10px;
         object-fit: cover;
+        cursor: pointer;
         @include respond-to($breakpoint-tablet) {
             width: 30%;
             height: 150px;
