--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,10 +1,10 @@
 .header {
+    height: 100px;
     padding: 0 7%;
     border-top: 5px solid $color-purple;
     @include flex(row,space-between,center);
     color: $color-white;
     background-color: $color-white;
-    box-shadow: 0 2px 4px 1px $color-gray-transparency;
     position: sticky;
     top: 0;
     z-index: 10;
@@ -66,6 +66,9 @@
             }
         }
     }
+}
+.sticky-header {
+    box-shadow: 0 2px 4px 1px $color-gray-transparency;
 }
 .nav {
     display: none;
