--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -25,26 +25,80 @@
     &__p {
         width: 60%;
         max-width: 402px;
+        cursor: pointer;
         @extend %margin;
+        & span:not(:last-child)::after {
+            content: ", ";
+        }
     }
 }
 .search-bar {
     width: 89%;
     max-width: 551px;
-    height: 50px;
+    min-height: 50px;
+    height: auto;
     border: 1px solid $color-purple;
+    background-color: white;
     border-radius: 27px;
     z-index: 10;
     @extend %margin;
-    @include flex(row,space-around,center);
+    &__components {
+        margin-top: 12px;
+        @include flex(row,space-between,center);
+    }
+    &__icon {
+        margin-left: 20px;
+        width: 20px;
+        height: 20px;
+        visibility: hidden;
+        background-repeat: no-repeat;
+    }
     &__input {
         outline: none;
         border: none;
-        margin-left: 20px;
+        margin-left: 15px;
+        flex-grow: 2;
     }
     &__button {
         @extend %reset-button;
+        margin-right: 20px;
+        width: 20px;
+        height: 20px;
+        background-image: url("../img/icon-search.svg");
+        background-repeat: no-repeat;
+        &.close-btn {
+            background-image: url("../img/close.svg");
+        }
     }
+    &__suggestions {
+        list-style-image: url("../img/search.svg");
+        color: $color-gray-text;
+        margin-left: 28px;
+        text-align: left;
+        & li {
+            font-family: $secondary-font;
+            font-size: map-get($fs,normal);
+            font-weight: normal;
+            margin-left: 15px;
+            margin-top: 4px;
+            padding-left: 10px;
+            &:last-child {
+                margin-bottom: 18px;
+            }
+        }
+    }
+}
+.search-bar__results {
+    display: none;
+    margin-top: 10px;
+    margin-bottom: 14px;
+}
+.search-line::after {
+    content: " ";
+    display: block;
+    margin: 0 auto;
+    width: 93%;
+    border-bottom: 1px solid $color-gray-transparency;
 }
 
 .sticky {
