--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -29,3 +29,4 @@
 @import "./layout/gifos-gallery";
 @import "./layout/favorites";
 @import "./layout/no_results";
+@import "./layout/create-gifo-1";
