style search bar input

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -40,6 +40,9 @@ html{
     }
     &--xsmall {
         font-size: map-get($fs,x-small);
+        @include respond-to($breakpoint-desktop) {
+            font-size: map-get($fs,"normal");
+        }
     }
 }
 .footer {
