--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,11 @@ html {
 .p--xsmall {
   font-size: 1.4rem;
 }
+@media only screen and (min-width: 1024px) {
+  .p--xsmall {
+    font-size: 1.6rem;
+  }
+}
 
 .footer {
   font-family: "Roboto", sans-serif;
@@ -490,7 +495,10 @@ footer__icon {
   outline: none;
   border: none;
   margin-left: 15px;
+  margin-right: 15px;
   flex-grow: 2;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.6rem;
 }
 .search-bar__button {
   margin-right: 20px;
