--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -57,7 +57,10 @@
         outline: none;
         border: none;
         margin-left: 15px;
+        margin-right: 15px;
         flex-grow: 2;
+        font-family: $secondary-font;
+        font-size: map-get($fs,normal);
     }
     &__button {
         @extend %reset-button;
