--- a/scss/layout/_max-gif.scss
+++ b/scss/layout/_max-gif.scss
@@ -13,6 +13,7 @@
     &__img {
         width: 318px;
         height: 245px;
+        background-color: gray;
         // object-fit: cover;
         // background-color: gray;
         @extend %margin;
