--- a/scss/layout/_gifos-gallery.scss
+++ b/scss/layout/_gifos-gallery.scss
@@ -4,12 +4,13 @@
 }
 .gallery {
     margin: 28px 2.8% 78px 2.8%;
-    // @include flex(row, flex-start, center);
-    // flex-wrap: wrap;
+    @include flex(row, center, center);
+    flex-wrap: wrap;
     @include respond-to($breakpoint-tablet) {
         margin: 28px 10% 78px 10%;
     }
     &__gifo {
+        background-color: gray;
         width: 41.6%;
         height: 120px;
         margin: 10px;
