--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -15,6 +15,8 @@
         padding: 0 10%;
     }
     &__logo {
+        content: url("../img/logo.svg");
+        cursor: pointer;
         width: 50px;
         @include respond-to($breakpoint-desktop) {
             width: 60px;
