--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -18,3 +18,6 @@
         background-image: url($route-hover);
     }
 }
+.fav-icon__active {
+    background-image: url("../img/icon-fav-active.svg");
+}
