--- a/css/styles.css
+++ b/css/styles.css
@@ -501,13 +501,13 @@ footer__icon {
   outline: none;
   border: none;
   margin-left: 15px;
-  margin-right: 15px;
   flex-grow: 2;
   font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
 }
 .search-bar__button {
   margin-right: 20px;
+  margin-left: 15px;
   width: 20px;
   height: 20px;
   background-image: url("../img/icon-search.svg");
