--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -57,7 +57,6 @@
         outline: none;
         border: none;
         margin-left: 15px;
-        margin-right: 15px;
         flex-grow: 2;
         font-family: $secondary-font;
         font-size: map-get($fs,normal);
@@ -65,6 +64,7 @@
     &__button {
         @extend %reset-button;
         margin-right: 20px;
+        margin-left: 15px;
         width: 20px;
         height: 20px;
         background-image: url("../img/icon-search.svg");
