--- a/scss/layout/_gifos-gallery.scss
+++ b/scss/layout/_gifos-gallery.scss
@@ -1,6 +1,7 @@
 .search-results {
     display: none;
-    margin-bottom: 80px;
+    padding-bottom: 80px;
+    background-color: $color-white;
 }
 .gallery {
     margin: 28px 2.8% 78px 2.8%;
