--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,7 +3,7 @@
     padding: 0 7%;
     border-top: 5px solid $color-purple;
     @include flex(row,space-between,center);
-    color: $color-white;
+    // color: $color-white;
     background-color: $color-white;
     position: sticky;
     top: 0;
