--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -10,7 +10,7 @@ $color-gray-transparency: #9CAFC38C;
 $color-purple-transparency: #572EE5B3;
 
 // Night mode colors
-$color-medium-gray: #37383C;
+$color-light-gray: #37383C;
 $color-dark-gray: #222326;
 
 //Fonts
