--- a/scss/components/_divisory-line.scss
+++ b/scss/components/_divisory-line.scss
@@ -3,7 +3,7 @@
     display: block;
     margin: 0 auto;
     width: 157px;
-    margin-top: 35px;
+    padding-top: 35px;
     margin-bottom: 43px;
     border-bottom: 1px solid $color-gray-transparency;
     @include respond-to($breakpoint-tablet) {
