--- a/scss/layout/_favorites.scss
+++ b/scss/layout/_favorites.scss
@@ -1,5 +1,6 @@
 .favorites , .mis-gifos{
+    background-color: $color-white;
     display: none;
-    margin-top: 28px;
-    margin-bottom: 78px;
+    padding-top: 28px;
+    padding-bottom: 78px;
 }
