--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,7 +1,11 @@
+.body {
+    color: $color-purple;
+}
 .main {
-    margin: 7px 0 45px 0;
+    background-color: $color-white;
+    padding: 7px 0 45px 0;
     @include respond-to($breakpoint-tablet) {
-        margin: 76px 0 95px 0;
+        padding: 76px 0 95px 0;
     }
     &__h1 {
         margin-bottom: 31px;
@@ -38,7 +42,7 @@
     min-height: 50px;
     height: auto;
     border: 1px solid $color-purple;
-    background-color: white;
+    background-color: $color-white;
     border-radius: 27px;
     z-index: 10;
     @extend %margin;
@@ -48,7 +52,7 @@
     }
     &__icon {
         margin-left: 20px;
-        width: 20px;
+        width: 40px;
         height: 20px;
         visibility: hidden;
         background-repeat: no-repeat;
@@ -66,13 +70,13 @@
         @extend %reset-button;
         margin-right: 20px;
         margin-left: 15px;
-        width: 20px;
+        width: 40px;
         height: 20px;
         background-image: url("../img/icon-search.svg");
         background-repeat: no-repeat;
-        &.close-btn {
-            background-image: url("../img/close.svg");
-        }
+        // &.close-btn {
+        //     background-image: url("../img/close.svg");
+        // }
     }
     &__suggestions {
         list-style-image: url("../img/search.svg");
