--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -49,6 +49,11 @@ $media-icons-hover: (
     "twitter": "../img/icon_twitter_hover.svg",
     "instagram": "../img/icon_instagram_hover.svg",
 );
+$media-icons-night-hover: (
+    "facebook": "../img/icon_facebook_noc.svg",
+    "twitter": "../img/icon_twitter_noc.svg",
+    "instagram": "../img/icon_instagram_noc.svg",
+);
 $card-icons: (
     "fav": "../img/icon-fav.svg",
     "expand": "../img/icon-max-normal.svg",
