--- a/scss/base/_links.scss
+++ b/scss/base/_links.scss
@@ -14,6 +14,6 @@
     }
     &:active {
         color: $color-gray-text;
-        //border-bottom: none;
+        border-bottom: 2px solid transparent;
     }
 }
