--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -72,7 +72,7 @@
         margin-left: 15px;
         width: 40px;
         height: 20px;
-        background-image: url("../img/icon-search.svg");
+        // background-image: url("../img/icon-search.svg");
         background-repeat: no-repeat;
         // &.close-btn {
         //     background-image: url("../img/close.svg");
@@ -114,7 +114,7 @@
         width: 334px;
         position: fixed;
         top: 30px;
-        left: 15%;
+        left: 14%;
     }
     @include respond-to(1440px){
         left: 24%;
